--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 			<title> Mega sejt website </title>
 			<link rel="stylesheet" type = "text/css" href="format.css">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
+			<script type="text/javascript" src="cordova.js"></script>
 	</head>
 	
 	<body>
